persistens layer works. exception handling improved.
