# src/main/java/hu/kunb/paymentapi/core/model/PaymentRecord.java
@@ -1,0 +1,7 @@
+package hu.kunb.paymentapi.core.model;
+
+import java.util.UUID;
+
+public record PaymentRecord(UUID clientId, UUID transactionId, Long amount) {
+
+}
