# src/main/java/hu/kunb/paymentapi/persistence/entities/PaymentEntity.java
@@ -1,0 +1,35 @@
+package hu.kunb.paymentapi.persistence.entities;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import jakarta.persistence.UniqueConstraint;
+import java.time.LocalDateTime;
+import java.util.UUID;
+import lombok.Builder;
+import lombok.Data;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Entity
+@Table(name = "payments", uniqueConstraints = @UniqueConstraint(columnNames = {"clientId", "transactionId"}))
+@Data
+public class PaymentEntity {
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private Long id;
+
+  @Column(nullable = false)
+  private UUID transactionId;
+
+  @Column(nullable = false)
+  private UUID clientId;
+
+  @Column(nullable = false)
+  private Long amount;
+
+}
